setup file browser